feat: 添加数据备份与导入功能, 并优化原生代码